objects/AW_ProductCodeAndCategoryMapping__mdt.object
<CustomObject>
    <description>Contains product code and category mapping for Insurance Policy and Financial account object</description>
    <fields>
        <fullName>AW_ProductCategory__c</fullName>
        <description>Product category</description>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductCode__c</fullName>
        <description>Product Code</description>
        <inlineHelpText>Append &apos;C&apos; after the ProductCode.</inlineHelpText>
        <label>Product Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductSubCategory__c</fullName>
        <description>Subcategory of Product</description>
        <label>Product Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Prototype__c</fullName>
        <description>Prototype Code</description>
        <label>Prototype</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SalesforceObject__c</fullName>
        <description>Related Salesforce Object</description>
        <label>Salesforce Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ProductCodeAndCategoryMapping</label>
    <listViews>
        <fullName>All_Mappings</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>AW_ProductCode__c</columns>
        <columns>AW_Prototype__c</columns>
        <columns>AW_ProductName__c</columns>
        <columns>AW_ProductCategory__c</columns>
        <columns>AW_ProductSubCategory__c</columns>
        <columns>AW_SalesforceObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
    </listViews>
    <pluralLabel>ProductCodeAndCategoryMappings</pluralLabel>
</CustomObject>